ahora se traen los creditos